Remove Ant layer from plug-in install
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>